clash-tracker/main/objects/Player__c/fields/Clan__c.field-meta.xml
<CustomField>
    <fullName>Clan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clan</label>
    <referenceTo>Clan__c</referenceTo>
    <relationshipLabel>Players</relationshipLabel>
    <relationshipName>Players</relationshipName>
    <type>Lookup</type>
</CustomField>