clash-tracker/main/objects/Player__c/fields/Clan_Capital_Contributions__c.field-meta.xml
<CustomField>
    <fullName>Clan_Capital_Contributions__c</fullName>
    <label>Clan Capital Contributions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>