clash-tracker/main/objects/Player__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <length>64</length>
    <type>Text</type>
</CustomField>