clash-tracker/main/objects/Player__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <externalId>true</externalId>
    <label>Tag</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>