clash-tracker/main/objects/Player__c/fields/Town_Hall_Level__c.field-meta.xml
<CustomField>
    <fullName>Town_Hall_Level__c</fullName>
    <label>Town Hall Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>