clash-tracker/main/objects/Player__c/fields/War_Stars__c.field-meta.xml
<CustomField>
    <fullName>War_Stars__c</fullName>
    <label>War Stars</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>